--- a/21_Drag_N_Drop/style.css
+++ b/21_Drag_N_Drop/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: steelblue;
+    background-color: #FFE3BB;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -10,9 +10,9 @@ body{
 .empty{
     width: 145px;
     height: 145px;
-    border: 3px black solid;
+    border: 3px #83A2FF solid;
     margin: 10px;
-    background-color: aliceblue;
+    background-color: #B4BDFF;
 }
 .fill {
     background-image: url('https://source.unsplash.com/random/150x150');
