--- a/06_Scroll_Animation/style.css
+++ b/06_Scroll_Animation/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
   }
 body{
-    background-color: #efedd6;
+    background-color: #F28585;
     display: flex;
     flex-direction: column;
     margin: 0;
@@ -11,9 +11,11 @@ body{
     overflow-x: hidden;
     font-family: Arial, Helvetica, sans-serif;
 }
-
+h1{
+    color:#FFFC9B ;
+    font-family:Cursive;
+}
 .box{
-    background-color: steelblue;
     color: white;
     margin: 10px;
     width: 400px;
@@ -22,7 +24,7 @@ body{
     align-items: center;
     justify-content: center;
     border-radius: 10px;
-    box-shadow: 2px 4px 5px rgb(0, 0, 0,0.3);
+    box-shadow: 0px 1px 1px 1px #FFFC9B;
     transform: translateX(400%);
     transition: transform 0.4s ease;
 }
@@ -32,6 +34,8 @@ body{
 .box.show {
     transform: translateX(0);
 }
-.box h2 {
-    font-size: 45px;
+.box img {
+    width:200px;
+    height:200px;
+    object-fit:cover;
 }
